test: update keating snapshot, only release from recharge zone (#299)
Accommodate MODFLOW-ORG/modflow6#2503, restrict particle release zone to recharge area

--- a/doc/sections/ex-gwt-keating.tex
+++ b/doc/sections/ex-gwt-keating.tex
@@ -40,7 +40,7 @@ Simulated particle tracks from \mf are shown in figure~\ref{fig:ex-gwt-keating-t
 \end{StandardFigure}                                  
 
 \begin{StandardFigure}{
-                                    Particle pathlines simulated by \mf for the \cite{keating2009stable} problem involving groundwater flow and transport through an unsaturated zone.  A particle is released at the center of every cell in the top layer of the grid.
+                                    Particle pathlines simulated by \mf for the \cite{keating2009stable} problem involving groundwater flow and transport through an unsaturated zone.  A particle is released at the center of each recharge cell in the top layer of the grid.
                                     }{fig:ex-gwt-keating-tracks}{../figures/ex-gwt-keating-tracks.png}
 \end{StandardFigure}      
 
